clean code service & controller layer